fixed background gradient, and darkened background further to emphasize contrast

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 Body {
     color: #05F4B7;
-    background-color: #545C66;
-    box-shadow:inset 0 700px 100px rgb(211, 211, 211),inset 0 -700px 100px rgb(216, 216, 216);
+    background-color: #262626;
+    box-shadow:inset 0 500px 400px rgb(211, 211, 211),inset 0 -500px 400px rgb(216, 216, 216);
 }
 .nav-nav {
     color: #05F4B7;
